Populating a queue of candles in RabbitMQ

--- a/bitcoin-candle-generator/.env
+++ b/bitcoin-candle-generator/.env
@@ -1,1 +1,4 @@
 PRICES_API=https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd
+
+QUEUE_NAME=candles
+AMQPLIB=amqp://admin:admin@localhost:5672
