--- a/bitcoin-candle-frontend/package.json
+++ b/bitcoin-candle-frontend/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-property-decorator": "^9.1.2",
+    "vue3-apexcharts": "^1.4.1",
     "vuex": "^4.0.0",
     "vuex-module-decorators": "^2.0.0"
   },
